--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ plugins {
   id "io.spring.nohttp" version "0.0.8"
   id "checkstyle"
   id "jacoco"
+  id "java"
 }
 
 if (JavaVersion.current().isJava8Compatible())
@@ -26,16 +27,16 @@ apply plugin: 'io.spring.nohttp'
 
 allprojects {
   apply plugin: 'java'
-  apply plugin: 'idea'
   apply plugin: 'checkstyle'
   apply plugin: 'jacoco'
+
 
   repositories {
     mavenCentral()
   }
 
   dependencies {
-    testImplementation group: 'junit', name: 'junit', version: '4.11'
+    testImplementation 'junit:junit:4.13.2'
   }
 
 
@@ -58,8 +59,8 @@ subprojects {
   if (current.compareTo(JavaVersion.VERSION_1_8) <= 0)
   {
     ext.vmrange = 'jdk15to18'
-    sourceCompatibility = 1.5
-    targetCompatibility = 1.5
+    sourceCompatibility = 1.6
+    targetCompatibility = 1.6
   }
   else
   {
@@ -70,10 +71,10 @@ subprojects {
 
   version = '1.70'
 
- task testFull(type:Test) {
+  task testFull(type: Test) {
     systemProperties = [
             'bc.test.data.home': bcTestDataHome,
-            'test.full':'true'
+            'test.full'        : 'true'
     ]
     systemProperty 'bc.test.data.home', bcTestDataHome
     maxHeapSize = "1536m"
@@ -115,9 +116,15 @@ subprojects {
   }
 
   jacoco {
-    reportsDirectory =  layout.buildDirectory.dir("jacoco")
+    reportsDirectory = layout.buildDirectory.dir("jacoco")
   }
 
 }
 
 test.dependsOn([':core:test', ':prov:test', ':pkix:test', ':mail:test', 'pg:test', ':tls:test'])
+
+project("tls") {
+  dependencies {
+    project(":core")
+  }
+}
