--- a/gradle.properties
+++ b/gradle.properties
@@ -38,12 +38,12 @@ testing.test.anyOs.anyArch.failsafe_skip=sha,gcm,cbc,ecb,rand,seed
 
 #sse on linux
 testing.testSSE.linux.x86_64.variant=linux-x86_64-sse
-testing.testSSE.linux.x86_64.sentinel=bc-fips-libs
+testing.testSSE.linux.x86_64.sentinel=bc-libs
 testing.testSSE.linux.x86_64.failsafe_skip=noskip
 
 #avx on linux
 testing.testAVX.linux.x86_64.variant=linux-x86_64-avx
-testing.testAVX.linux.x86_64.sentinel=bc-fips-libs
+testing.testAVX.linux.x86_64.sentinel=bc-libs
 testing.testAVX.linux.x86_64.failsafe_skip=noskip
 
 #vaes on linux
@@ -54,12 +54,12 @@ testing.testAVX.linux.x86_64.failsafe_skip=noskip
 
 #sse on darwin
 testing.testSSE.darwin.x86_64.variant=darwin-x86_64-sse
-testing.testSSE.darwin.x86_64.sentinel=bc-fips-libs
+testing.testSSE.darwin.x86_64.sentinel=bc-libs
 testing.testSSE.darwin.x86_64.failsafe_skip=sha
 
 #avx on darwin
 testing.testAVX.darwin.x86_64.variant=darwin-x86_64-avx
-testing.testAVX.darwin.x86_64.sentinel=bc-fips-libs
+testing.testAVX.darwin.x86_64.sentinel=bc-libs
 testing.testAVX.darwin.x86_64.failsafe_skip=sha
 
 
