Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ test-java-code:
   script:
     - "apply_overlay bc-fips-2-0-X-java ./"
     - . cienv.sh
-    - "gradle clean build"
+    - "gradle clean build -Pskip.pqc.tests"
 
 test-code-sse:
   stage: testSSE
@@ -24,7 +24,7 @@ test-code-sse:
     - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
     - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-sse -cp jars/bc-fips-2.0.1-SNAPSHOT.jar org.bouncycastle.util.DumpInfo -verbose"
-    - "gradle clean withNative build testSSE  -x test"
+    - "gradle clean withNative build testSSE  -x test -Pskip.pqc.tests"
 
 
 test-code-avx:
@@ -39,5 +39,5 @@ test-code-avx:
     - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
     - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-avx -cp jars/bc-fips-2.0.1-SNAPSHOT.jar org.bouncycastle.util.DumpInfo -verbose"
-    - "gradle clean withNative build testAVX  -x test"
+    - "gradle clean withNative build testAVX  -x test -Pskip.pqc.tests"
 
