--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,10 @@
 import static ExtraFunctions.*
 
 
+dependencies {
+  testImplementation("com.fasterxml.jackson.core:jackson-databind:2.13.3")
+}
+
 test {
   testLogging.showStandardStreams = true
   jvmArgs propValsAsArgs(project, test.name, "variant", "org.bouncycastle.native.cpu_variant"),
