--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=2.0.1-SNAPSHOT
-
+org.gradle.jvmargs=-Xmx2g
 
 #------------------------------------------------------------------------------
 # Module creation.
