--- a/mail/build.gradle
+++ b/mail/build.gradle
@@ -1,12 +1,30 @@
 
-
 dependencies {
-  implementation fileTree("$rootDir/libs")
-  implementation project(":core")
-  implementation project(":pkix")
-  implementation project(":prov")
-  implementation project(":util")
+  implementation project(':core')
+  implementation project(':util')
+  implementation project(':pkix')
+  implementation project(':prov')
+
+  implementation group: 'javax.mail', name: 'mail', version: '1.4'
 }
 
+jar.archiveBaseName = "bcmail-$vmrange"
 
+task sourcesJar(type: Jar) {
+  archiveBaseName = jar.archiveBaseName
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+  archiveBaseName = jar.archiveBaseName
+  classifier = 'javadoc'
+  from javadoc.destinationDir
+}
+
+artifacts {
+  archives jar
+  archives javadocJar
+  archives sourcesJar
+}
 
