--- a/prov/build.gradle
+++ b/prov/build.gradle
@@ -1,9 +1,25 @@
-
-
 dependencies {
-  implementation project(":core")
+  implementation project(':core')
 }
 
+jar.archiveBaseName = "bcprov-$vmrange"
 
 
+task sourcesJar(type: Jar) {
+  archiveBaseName = jar.archiveBaseName
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+  archiveBaseName = jar.archiveBaseName
+  classifier = 'javadoc'
+  from javadoc.destinationDir
+}
+
+artifacts {
+  archives jar
+  archives javadocJar
+  archives sourcesJar
+}
 
