--- a/util/build.gradle
+++ b/util/build.gradle
@@ -1,9 +1,26 @@
-
-
 dependencies {
-  implementation project(":core")
+  implementation project(':core')
+
+  testImplementation group: 'junit', name: 'junit', version: '4.11'
 }
 
+jar.archiveBaseName = "bcutil-$vmrange"
 
+task sourcesJar(type: Jar) {
+  archiveBaseName = jar.archiveBaseName
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
 
+task javadocJar(type: Jar, dependsOn: javadoc) {
+  archiveBaseName = jar.archiveBaseName
+  classifier = 'javadoc'
+  from javadoc.destinationDir
+}
+
+artifacts {
+  archives jar
+  archives javadocJar
+  archives sourcesJar
+}
 
