--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ test-code-sse:
     - "mkdir -p /tmp/bcfipslibs"
     - . cienv.sh
     - "gradle clean compileJava; \ cd native; \ ./build_linux.sh; \ cd .."
-    - "gradle withNative build copyJars  -x test"
+    - "gradle withNative build  -x test"
     - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
     - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-sse -cp jars/bc-fips-2.0.1-SNAPSHOT.jar org.bouncycastle.util.DumpInfo -verbose"
@@ -35,7 +35,7 @@ test-code-avx:
     - "mkdir -p /tmp/bcfipslibs"
     - . cienv.sh
     - "gradle clean compileJava; \ cd native; \ ./build_linux.sh; \ cd .."
-    - "gradle withNative build copyJars  -x test"
+    - "gradle withNative build  -x test"
     - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
     - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-avx -cp jars/bc-fips-2.0.1-SNAPSHOT.jar org.bouncycastle.util.DumpInfo -verbose"
