--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ fips-module=hybrid
 # Linux
 native.intel.linux.x86_64.sse=true
 native.intel.linux.x86_64.avx=true
-native.intel.linux.x86_64.vaes=false
+native.intel.linux.x86_64.vaes=true
 
 # Darwin -- Presently not considered for fips certification.
 native.intel.darwin.x86_64.sse=true
@@ -47,9 +47,9 @@ testing.testAVX.linux.x86_64.sentinel=bc-libs
 testing.testAVX.linux.x86_64.failsafe_skip=noskip
 
 #vaes on linux
-#testing.testVAES.linux.x86_64.variant=linux-x86_64-vaes
-#testing.testVAES.linux.x86_64.sentinel=bc-fips-libs
-#testing.testVAES.linux.x86_64.failsafe_skip=noskip
+testing.testVAES.linux.x86_64.variant=linux-x86_64-vaes
+testing.testVAES.linux.x86_64.sentinel=bc-libs
+testing.testVAES.linux.x86_64.failsafe_skip=noskip
 
 
 #sse on darwin
