--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,12 @@
-
+import static ExtraFunctions.propValsAsArgs
+import static ExtraFunctions.propValsAsArgs
+import static ExtraFunctions.propValsAsArgs
+import static ExtraFunctions.propValsAsArgs
+import static ExtraFunctions.propValsAsArgs
+import static ExtraFunctions.propValsAsArgs
+import static ExtraFunctions.propValsAsArgs
+import static ExtraFunctions.propValsAsArgs
+import static ExtraFunctions.propValsAsArgs
 
 buildscript {
   repositories {
@@ -72,6 +80,92 @@ subprojects {
   }
 
   version = '1.70'
+
+
+  task('testVAES', type: Test) {
+    systemProperty 'bc.test.data.home', bcTestDataHome
+    maxHeapSize = "2048m"
+    testLogging.showStandardStreams = true
+    testLogging.showCauses = true
+    testLogging.showExceptions = true
+    testLogging.showStackTraces = true
+
+    filter {
+      includeTestsMatching "AllTest*"
+
+      if (rootProject.hasProperty("skip.pqc.tests"))
+      {
+        exclude('**/pqc/**')
+      }
+    }
+
+//  doFirst {
+//    removeTempFileNix(propValOrFail(project, "testAVX", "x86_64", "library_path"))
+//  }
+
+    jvmArgs propValsAsArgs(project, "testVAES", "x86_64", "variant", "org.bouncycastle.native.cpu_variant"),
+            propValsAsArgs(project, "testVAES", "x86_64", "sentinel", "org.bouncycastle.native.sentinel"),
+            propValsAsArgs(project, "testVAES", "x86_64", "failsafe_skip", "test.bcfips.ignore.native")
+
+    // jvmArgs '-Dtest.bcfips.ignore.native=sha', '-Dorg.bouncycastle.native.library_path=/tmp/bcfipslibs', '-Dorg.bouncycastle.native.cpu_variant=linux-x86_64-avx'
+
+  }
+
+  task('testAVX', type: Test) {
+    systemProperty 'bc.test.data.home', bcTestDataHome
+    maxHeapSize = "2048m"
+    testLogging.showStandardStreams = true
+    testLogging.showCauses = true
+    testLogging.showExceptions = true
+    testLogging.showStackTraces = true
+
+    filter {
+      includeTestsMatching "AllTest*"
+
+      if (rootProject.hasProperty("skip.pqc.tests"))
+      {
+        exclude('**/pqc/**')
+      }
+    }
+
+//  doFirst {
+//    removeTempFileNix(propValOrFail(project, "testAVX", "x86_64", "library_path"))
+//  }
+
+    jvmArgs propValsAsArgs(project, "testAVX", "x86_64", "variant", "org.bouncycastle.native.cpu_variant"),
+            propValsAsArgs(project, "testAVX", "x86_64", "sentinel", "org.bouncycastle.native.sentinel"),
+            propValsAsArgs(project, "testAVX", "x86_64", "failsafe_skip", "test.bcfips.ignore.native")
+
+    // jvmArgs '-Dtest.bcfips.ignore.native=sha', '-Dorg.bouncycastle.native.library_path=/tmp/bcfipslibs', '-Dorg.bouncycastle.native.cpu_variant=linux-x86_64-avx'
+
+  }
+
+  task('testSSE', type: Test) {
+    systemProperty 'bc.test.data.home', bcTestDataHome
+    maxHeapSize = "2048m"
+    testLogging.showStandardStreams = true
+    testLogging.showCauses = true
+    testLogging.showExceptions = true
+    testLogging.showStackTraces = true
+
+    filter {
+      includeTestsMatching "AllTest*"
+
+      if (rootProject.hasProperty("skip.pqc.tests"))
+      {
+        exclude('**/pqc/**')
+      }
+    }
+
+    // doFirst {
+    //   removeTempFileNix(propValOrFail(project, "testAVX", "x86_64", "library_path"))
+    // }
+    jvmArgs propValsAsArgs(project, "testSSE", "x86_64", "variant", "org.bouncycastle.native.cpu_variant"),
+            propValsAsArgs(project, "testSSE", "x86_64", "sentinel", "org.bouncycastle.native.sentinel"),
+            propValsAsArgs(project, "testSSE", "x86_64", "failsafe_skip", "test.bcfips.ignore.native");
+  }
+
+
 
   task testFull(type: Test) {
 
